# aws-hands-on

./: .gitignore  README.md
.aws/: config
docker/: Dockerfile  docker-run.sh
python/01.ec2/: run.sh
python/02.mnist/pytorch/: simple_mnist.py
python/03.qabot/: requirements.txt
rust/ec2/: Cargo.toml  README.md
rust/ec2/src/: ec2-helloworld.rs
rust/ecs/: Cargo.toml  README.md
src/00.aws-cli/: README.md
src/01.ec2-get-started/: app.py
src/02.mnist/: app.py
src/03.qabot/pytorch/: mnist.ipynb
src/ec2-get-started/: .gitignore  README.md  app.py  requirements.txt
src/mnist/: README.md  destroy.sh
src/qabot/: README.md  app.py  destroy.sh
