[package]
name = "ec2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", version = "0.55.1" }
aws-sdk-ec2 = { git = "https://github.com/awslabs/aws-sdk-rust", version = "0.26.0" }
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", version = "0.55.1" }
