[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", version = "0.55.1" }
aws-sdk-ecs = { git = "https://github.com/awslabs/aws-sdk-rust", version = "0.26.0" }
clap = { version = "4.2.5", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
